--- a/index.html
+++ b/index.html
@@ -1,19 +1,41 @@
 <!DOCTYPE html>
-<!-- saved from url=(0057)https://ichbinleoon.github.io/anisearch-discord-bot/#team -->
-<html lang="en" dir="ltr"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Anime Search Discord Bot - Look up information about anime, manga and much more directly in Discord!">
-    <meta name="author" content="IchBinLeoon">
-    <meta name="keywords" content="AniSearch, Anime, Manga, Discord, Bot, Python, discord.py, AniList, MyAnimeList, Kitsu">
-    <title>AniSearch Bot</title>
-    <link href="https://ichbinleoon.github.io/anisearch-discord-bot/assets/imgs/favicon.png" rel="icon" type="image/png" sizes="256x256">
-    <link rel="preconnect" href="https://fonts.gstatic.com/">
-    <link href="./index_files/css2" rel="stylesheet">
-    <link href="./index_files/css2(1)" rel="stylesheet">
-    <link href="./index_files/css2(2)" rel="stylesheet">
-    <link href="./index_files/styles.css" rel="stylesheet" type="text/css">
-    <script>
+<!-- saved from url=(0057)https://kitsunity.glitch.me/ -->
+<!-- UwU -->
+<html lang="es" dir="ltr"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<!--Inicio del footer-->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<meta name="description" content="Sitio web oficial de la bot Kitsunity">
+<meta name="author" content="KitsuneCode">
+<meta name="keywords" content="KitsuneCode, kitsunecode, discord, api, bot">
+<meta name="msapplication-TileColor" content="#DEADBF">
+<!--Iconos-->
+<meta name="msapplication-TileImage" content="https://kitsunity.glitch.me/kitsunity_imagen.webp">
+<link rel="apple-touch-icon" sizes="180x180" href="https://kitsunity.glitch.me/kitsunity_imagen.webp">
+<link rel="shortcut icon" href="favicon.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="https://kitsunity.glitch.me/kitsunity_imagen.webp">
+<link rel="icon" type="image/png" sizes="16x16" href="https://kitsunity.glitch.me/kitsunity_imagen.webp">
+<link rel="mask-icon" href="https://kitsunity.glitch.me/kitsunity_imagen.webp" color="#DEADBF">
+<!--Un Discord Embed para el sitio web jsjs-->
+<title>Kitsunity</title>
+<meta content="Kitsunity" property="og:title">
+<meta content="Bienvenido al sitio web oficial de Kitsunity OwO" property="og:description">
+<meta content="https://kitsunity.glitch.me/" property="og:url">
+<meta content="https://kitsunity.glitch.me/recursos/imagenes/kitsunity_imagen.webp" property="og:image">
+<meta content="RANDOM" data-react-helmet="true" name="theme-color">
+<!--Un embed para Twitter ugu-->
+<meta name="twitter:image:src" content="https://kitsunity.glitch.me/kitsunity_imagen.webp">
+<meta name="twitter:creator" content="KitsuneCode">
+<meta name="twitter:site" content="Kitsunity">
+<meta name="twitter:title" content="Kitsunity">
+<meta name="twitter:card" content="Kitsunity">
+<!--Referencias-->
+<link rel="preconnect" href="https://fonts.gstatic.com/">
+<link href="./index_files/css2" rel="stylesheet">
+<link href="./index_files/css2(1)" rel="stylesheet">
+<link href="./index_files/css2(2)" rel="stylesheet">
+<link href="./index_files/styles.css" rel="stylesheet" type="text/css">
+  <script>
       function invite() {
         window.location.href = 'https://discord.com/oauth2/authorize?client_id=737236600878137363&permissions=124992&scope=bot';
       }
@@ -25,41 +47,42 @@
   <body>
     <div class="navbar">
       <div class="navbar-links-container">
-        <li><a class="navbar-link" href="https://ichbinleoon.github.io/anisearch-discord-bot/#home" draggable="false">Home</a></li>
+        <li><a class="navbar-link" href="https://kitsunity.glitch.me/#inicio" draggable="false">Inicio</a></li>
         <a class="navbar-point">•</a>
-        <li><a class="navbar-link" href="https://ichbinleoon.github.io/anisearch-discord-bot/#features" draggable="false">Features</a></li>
+        <li><a class="navbar-link" href="https://kitsunity.glitch.me/#features" draggable="false">Caracteristicas</a></li>
         <a class="navbar-point">•</a>
-        <li><a class="navbar-link" href="https://ichbinleoon.github.io/anisearch-discord-bot/#commands" draggable="false">Commands</a></li>
+        <li><a class="navbar-link" href="https://kitsunity.glitch.me/#commands" draggable="false">Comandos</a></li>
         <a class="navbar-point">•</a>
-        <li><a class="navbar-link" href="https://ichbinleoon.github.io/anisearch-discord-bot/#team" draggable="false">Team</a></li>
+        <li><a class="navbar-link" href="https://kitsunity.glitch.me/#team" draggable="false">Equipo</a></li>
         <a class="navbar-point">•</a>
-        <li><a class="navbar-link" onclick="invite()" draggable="false">Invite</a></li>
+        <li><a class="navbar-link" onclick="invite()" draggable="false">Invitar</a></li>
         <a class="navbar-point">•</a>
-        <li><a class="navbar-link" onclick="support()" draggable="false">Support</a></li>
+        <li><a class="navbar-link" onclick="support()" draggable="false">Soporte</a></li>
       </div>
     </div>
-    <section id="home">
+    <section id="inicio">
       <div style="height: 100px;"></div>
       <div class="home-container">
         <div class="image-container">
-          <img src="./index_files/logo.png" alt="Logo" draggable="false">
+          <img src="./index_files/recursos/imagenes/kitsunity_profile.png" alt="Logo" draggable="false">
         </div>
         <div class="headline-container">
-          <a>AniSearch Bot</a>
+          <a>Kitsunity</a>
         </div>
         <div class="description-container">
-          <a>Look up information about anime, manga and much more directly in Discord!</a>
+          <a>Una bot multifuncional destinada para ser tu mejor amiga</a>
         </div>
         <div class="invite-button-container">
-          <button class="invite-button" onclick="invite()">Invite</button>
+          <button class="invite-button" onclick="invite()">Invitame!!</button>
         </div>
         <div style="height: 50px;"></div>
         <div class="support-button-container">
-          <button class="support-button" onclick="support()">Support Server</button>
+          <button class="support-button" onclick="support()">Servidor de soporte</button>
         </div>
       </div>
     </section>
     <div class="parallax1"></div>
+    <!--
     <section id="features">
       <div class="features-container">
         <div style="height: 100px"></div>
@@ -93,6 +116,7 @@
         <img class="to-fate-in zero-two visible" src="./index_files/zero_two.png" draggable="false" alt="Image">
       </div>
     </section>
+    -->
     <section id="commands">
       <div class="commands-container">
         <div style="height: 50px"></div>
