--- a/index.html
+++ b/index.html
@@ -7,34 +7,48 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="description" content="Sitio web oficial de la bot Kitsunity">
 <meta name="author" content="KitsuneCode">
-<meta name="keywords" content="KitsuneCode, kitsunecode, discord, api, bot">
+<meta name="keywords" content="kitsunecode, discord, bot, multifuncion, discord.js">
 <meta name="msapplication-TileColor" content="#DEADBF">
 <!--Iconos-->
-<meta name="msapplication-TileImage" content="https://kitsunity.glitch.me/kitsunity_imagen.webp">
-<link rel="apple-touch-icon" sizes="180x180" href="https://kitsunity.glitch.me/kitsunity_imagen.webp">
+<meta name="msapplication-TileImage" content="https://kitsunity.glitch.me/recursos/perfiles/kitsunity_imagen.webp">
+<link rel="apple-touch-icon" sizes="180x180" href="https://kitsunity.glitch.me/recursos/perfiles/kitsunity_imagen.webp">
 <link rel="shortcut icon" href="favicon.ico">
-<link rel="icon" type="image/png" sizes="32x32" href="https://kitsunity.glitch.me/kitsunity_imagen.webp">
-<link rel="icon" type="image/png" sizes="16x16" href="https://kitsunity.glitch.me/kitsunity_imagen.webp">
-<link rel="mask-icon" href="https://kitsunity.glitch.me/kitsunity_imagen.webp" color="#DEADBF">
+<link rel="icon" type="image/png" sizes="32x32" href="https://kitsunity.glitch.me/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://kitsunity.glitch.me/favicon.ico">
+<link rel="mask-icon" href="https://kitsunity.glitch.me/recursos/perfiles/kitsunity_imagen.webp" color="#DEADBF">
 <!--Un Discord Embed para el sitio web jsjs-->
 <title>Kitsunity</title>
 <meta content="Kitsunity" property="og:title">
 <meta content="Bienvenido al sitio web oficial de Kitsunity OwO" property="og:description">
 <meta content="https://kitsunity.glitch.me/" property="og:url">
-<meta content="https://kitsunity.glitch.me/recursos/imagenes/kitsunity_imagen.webp" property="og:image">
+<meta content="https://kitsunity.glitch.me/recursos/perfiles/kitsunity_imagen.webp" property="og:image">
 <meta content="RANDOM" data-react-helmet="true" name="theme-color">
 <!--Un embed para Twitter ugu-->
-<meta name="twitter:image:src" content="https://kitsunity.glitch.me/kitsunity_imagen.webp">
+<meta name="twitter:image:src" content="https://kitsunity.glitch.me/recursos/perfiles/kitsunity_imagen.webp">
 <meta name="twitter:creator" content="KitsuneCode">
 <meta name="twitter:site" content="Kitsunity">
 <meta name="twitter:title" content="Kitsunity">
 <meta name="twitter:card" content="Kitsunity">
-<!--Referencias-->
-<link rel="preconnect" href="https://fonts.gstatic.com/">
-<link href="./index_files/css2" rel="stylesheet">
-<link href="./index_files/css2(1)" rel="stylesheet">
-<link href="./index_files/css2(2)" rel="stylesheet">
-<link href="./index_files/styles.css" rel="stylesheet" type="text/css">
+<!--Referencias CSS-->
+<link href="https://fonts.gstatic.com/" rel="preconnect">
+<link href="./index_files/css/estatica/css1" rel="stylesheet">
+<link href="./index_files/css/estilos.css" rel="stylesheet" >
+<link href="./index_files/css/all.css" rel="stylesheet" >
+<link href="./index_files/css/bulma.min.css" rel="stylesheet" >
+<link href="./index_files/css/estatica/css2" rel="stylesheet">
+<link href="./index_files/css/estatica/css2(1)" rel="stylesheet">
+<link href="./index_files/css/estatica/css2(2)" rel="stylesheet">
+<link href="./index_files/css/styles.css" rel="stylesheet" type="text/css">
+<!--Referencias JS-->
+<script async="" src="./index_files/js/analiticas.js" type="text/javascript"></script>
+<script async="" src="./index_files/js/estatica/js" type="text/javascript"></script>
+<script type="text/javascript">
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-88716609-2');
+</script>
+<!--Funciones adicionales-->
   <script>
       function invite() {
         window.location.href = 'https://discord.com/oauth2/authorize?client_id=737236600878137363&permissions=124992&scope=bot';
@@ -43,8 +57,9 @@
         window.location.href = 'https://discord.gg/Bv94yQYZM8';
       }
     </script>
-  </head>
-  <body>
+<!--Inicio de la pagina UwU-->
+</head>
+  <body>    
     <div class="navbar">
       <div class="navbar-links-container">
         <li><a class="navbar-link" href="https://kitsunity.glitch.me/#inicio" draggable="false">Inicio</a></li>
@@ -61,10 +76,10 @@
       </div>
     </div>
     <section id="inicio">
-      <div style="height: 100px;"></div>
+      <div style="height: 80px;"></div>
       <div class="home-container">
         <div class="image-container">
-          <img src="./index_files/recursos/imagenes/kitsunity_profile.png" alt="Logo" draggable="false">
+          <img src="./recursos/imagenes/kitsunity_profile.png" alt="Logo" draggable="false">
         </div>
         <div class="headline-container">
           <a>Kitsunity</a>
@@ -366,7 +381,7 @@
         <div class="team-box">
           <br>
           <div class="team-box-image">
-            <img src="./index_files/ichbinleoon.gif" alt="Picture" draggable="false">
+            <img src="./recursos/imagenes/chbinleoon.gif" alt="Picture" draggable="false">
           </div>
           <div class="team-box-name">
             <a>IchBinLeoon#9999</a>
@@ -374,16 +389,16 @@
           <div class="team-box-links">
             <p>
               <a href="https://github.com/IchBinLeoon" draggable="false">
-                <img alt="GitHub" src="./index_files/github.svg" draggable="false">
+                <img alt="GitHub" src="./recursos/imagenes/github.svg" draggable="false">
               </a>
               <a href="https://discordapp.com/users/223871059068321793" draggable="false">
-                <img alt="Discord" src="./index_files/discord.svg" draggable="false">
+                <img alt="Discord" src="./recursos/imagenes/discord.svg" draggable="false">
               </a>
               <a href="https://twitter.com/IchBinLeoon" draggable="false">
-                <img alt="Twitter" src="./index_files/twitter.svg" draggable="false">
+                <img alt="Twitter" src="./recursos/imagenes/twitter.svg" draggable="false">
               </a>
               <a href="https://myanimelist.net/profile/IchBinLeoon" draggable="false">
-                <img alt="MyAnimeList" src="./index_files/myanimelist.svg" draggable="false">
+                <img alt="MyAnimeList" src="./recursos/imagenes/myanimelist.svg" draggable="false">
               </a>
             </p>
           </div>
@@ -408,7 +423,7 @@
     <div class="copyright">
       <a>Copyright © 2021 IchBinLeoon</a>
     </div>
-    <script type="text/javascript" src="./index_files/jquery.min.js.descargar"></script>
-    <script type="text/javascript" src="./index_files/main.js.descargar"></script>
+    <script type="text/javascript" src="./index_files/js/jquery.min.js"></script>
+    <script type="text/javascript" src="./index_files/js/main.js"></script>
   
 </body></html>
