--- a/index.html
+++ b/index.html
@@ -10,31 +10,30 @@
 <meta name="keywords" content="kitsunecode, discord, bot, multifuncion, discord.js">
 <meta name="msapplication-TileColor" content="#DEADBF">
 <!--Iconos-->
-<meta name="msapplication-TileImage" content="https://kitsunity.glitch.me/recursos/perfiles/kitsunity_imagen.webp">
-<link rel="apple-touch-icon" sizes="180x180" href="https://kitsunity.glitch.me/recursos/perfiles/kitsunity_imagen.webp">
+<meta name="msapplication-TileImage" content="https://kitsunity.glitch.me/recursos/imagenes/kitsunity_imagen.webp">
+<link rel="apple-touch-icon" sizes="180x180" href="https://kitsunity.glitch.me/recursos/imagenes/kitsunity_imagen.webp">
 <link rel="shortcut icon" href="favicon.ico">
-<link rel="icon" type="image/png" sizes="32x32" href="https://kitsunity.glitch.me/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://kitsunity.glitch.me/favicon.ico">
-<link rel="mask-icon" href="https://kitsunity.glitch.me/recursos/perfiles/kitsunity_imagen.webp" color="#DEADBF">
+<link rel="icon" type="image/png" sizes="32x32" href="https://kitsunity.glitch.me/recursos/imagenes/kitsunity_imagen.webp">
+<link rel="icon" type="image/png" sizes="16x16" href="https://kitsunity.glitch.me/recursos/imagenes/kitsunity_imagen.webp">
+<link rel="mask-icon" href="https://kitsunity.glitch.me/recursos/imagenes/kitsunity_imagen.webp" color="#DEADBF">
 <!--Un Discord Embed para el sitio web jsjs-->
 <title>Kitsunity</title>
 <meta content="Kitsunity" property="og:title">
 <meta content="Bienvenido al sitio web oficial de Kitsunity OwO" property="og:description">
 <meta content="https://kitsunity.glitch.me/" property="og:url">
-<meta content="https://kitsunity.glitch.me/recursos/perfiles/kitsunity_imagen.webp" property="og:image">
-<meta content="RANDOM" data-react-helmet="true" name="theme-color">
+<meta content="https://kitsunity.glitch.me/recursos/imagenes/kitsunity_imagen.webp" property="og:image">
+<meta content="Purple" data-react-helmet="true" name="theme-color">
 <!--Un embed para Twitter ugu-->
-<meta name="twitter:image:src" content="https://kitsunity.glitch.me/recursos/perfiles/kitsunity_imagen.webp">
+<meta name="twitter:image:src" content="https://kitsunity.glitch.me/recursos/imagenes/kitsunity_imagen.webp">
 <meta name="twitter:creator" content="KitsuneCode">
 <meta name="twitter:site" content="Kitsunity">
 <meta name="twitter:title" content="Kitsunity">
 <meta name="twitter:card" content="Kitsunity">
 <!--Referencias CSS-->
 <link href="https://fonts.gstatic.com/" rel="preconnect">
-<link href="./index_files/css/estatica/css1" rel="stylesheet">
+<link href="./index_files/css/css1" rel="stylesheet">
 <link href="./index_files/css/estilos.css" rel="stylesheet" >
 <link href="./index_files/css/all.css" rel="stylesheet" >
-<link href="./index_files/css/bulma.min.css" rel="stylesheet" >
 <link href="./index_files/css/estatica/css2" rel="stylesheet">
 <link href="./index_files/css/estatica/css2(1)" rel="stylesheet">
 <link href="./index_files/css/estatica/css2(2)" rel="stylesheet">
@@ -63,8 +62,9 @@
     <div class="navbar">
       <div class="navbar-links-container">
         <li><a class="navbar-link" href="https://kitsunity.glitch.me/#inicio" draggable="false">Inicio</a></li>
+        <!--
         <a class="navbar-point">•</a>
-        <li><a class="navbar-link" href="https://kitsunity.glitch.me/#features" draggable="false">Caracteristicas</a></li>
+        <li><a class="navbar-link" href="https://kitsunity.glitch.me/#features" draggable="false">Caracteristicas</a></li>-->
         <a class="navbar-point">•</a>
         <li><a class="navbar-link" href="https://kitsunity.glitch.me/#commands" draggable="false">Comandos</a></li>
         <a class="navbar-point">•</a>
@@ -75,6 +75,7 @@
         <li><a class="navbar-link" onclick="support()" draggable="false">Soporte</a></li>
       </div>
     </div>
+    <div class="parallax-top"></div>
     <section id="inicio">
       <div style="height: 80px;"></div>
       <div class="home-container">
@@ -132,29 +133,29 @@
       </div>
     </section>
     -->
-    <section id="commands">
+    <section id="comandos">
       <div class="commands-container">
         <div style="height: 50px"></div>
         <div class="commands-headline-container">
-          <a>Commands</a>
+          <a>Comandos</a>
         </div>
         <div class="commands-subtitle-container">
-          <p>Command Prefix: <code>as! | @AniSearch | Customizable</code></p>
-          <p>Parameters: <code>&lt;&gt;</code> - required, <code>[]</code> - optional, <code>|</code> - either/or</p>
-          <p>Do not include <code>&lt;&gt;</code> , <code>[]</code>  or <code>|</code>  when executing the command.</p>
+          <p>Prefix: <code>k= | Customisable</code></p>
+          <p>Parametros: <code>&lt;&gt;</code> - requerido, <code>[]</code> - opcional, <code>|</code> - otro/o</p>
+          <p>NO incluyas <code>&lt;&gt;</code> , <code>[]</code>  o <code>|</code>  cuando vayas a ejecutar el comando</p>
         </div>
         <div style="height: 25px"></div>
         <div class="commands-table-headline">
-          <a>Search</a>
+          <a>Acción</a>
         </div>
         <div class="commands-table-container">
           <table cellspacing="0" cellpadding="0" class="commands-table">
             <tbody><tr>
-              <th>Usage</th>
-              <th>Description</th>
+              <th>Uso</th>
+              <th>Descripción</th>
             </tr>
             <tr>
-                <td style="width: 375px"><code>anime &lt;title&gt;</code></td>
+                <td style="width: 375px">angry<code> [usuario]</code></td>
               <td>Searches for an anime with the given title and displays information about the search results such as type, status, episodes, description, and more!</td>
             </tr>
             <tr>
@@ -369,6 +370,7 @@
         <div style="height: 150px;"></div>
       </div>
     </section>
+        <div class="parallax1"></div>
     <section id="team">
       <div class="team-container">
         <div style="height: 50px"></div>
@@ -381,7 +383,7 @@
         <div class="team-box">
           <br>
           <div class="team-box-image">
-            <img src="./recursos/imagenes/chbinleoon.gif" alt="Picture" draggable="false">
+            <img src="./recursos/imagenes/ichbinleoon.gif" alt="Picture" draggable="false">
           </div>
           <div class="team-box-name">
             <a>IchBinLeoon#9999</a>
@@ -402,6 +404,32 @@
               </a>
             </p>
           </div>
+           <div class="team-subtitle-container">
+          <a>Owner &amp; Lead Developer</a>
+        <div class="team-box">
+          <br>
+          <div class="team-box-image">
+            <img src="./recursos/imagenes/ichbinleoon.gif" alt="Picture" draggable="false">
+          </div>
+          <div class="team-box-name">
+            <a>IchBinLeoon#9999</a>
+          </div>
+          <div class="team-box-links">
+            <p>
+              <a href="https://github.com/KitsuneCode" draggable="false">
+                <img alt="GitHub" src="./recursos/imagenes/github.svg" draggable="false">
+              </a>
+              <a href="https://discord.com/users/824760675586932766" draggable="false">
+                <img alt="Discord" src="./recursos/imagenes/discord.svg" draggable="false">
+              </a>
+              <a href="https://twitter.com/IchBinLeoon" draggable="false">
+                <img alt="Twitter" src="./recursos/imagenes/twitter.svg" draggable="false">
+              </a>
+              <a href="https://myanimelist.net/profile/IchBinLeoon" draggable="false">
+                <img alt="MyAnimeList" src="./recursos/imagenes/myanimelist.svg" draggable="false">
+              </a>
+            </p>
+          </div>
         </div>
       </div>
     </section>
@@ -412,6 +440,7 @@
       </div>
       <div class="footer-links-container">
         <p>
+          <i class="fa fa-heart" aria-hidden="true"></i>
           <a onclick="invite()">Invite</a>
           <a style="cursor: default;"> | </a>
           <a onclick="support()">Support</a>
