--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
           <a>Kitsunity</a>
         </div>
         <div class="description-container">
-          <a>Una bot multifuncional destinada para ser tu mejor amiga</a>
+          <a>Una bot multifuncional destinada para ser tu mejor amiga, con un monton de comandos interesantes y funcionalidades unicas</a>
         </div>
         <div class="invite-button-container">
           <button class="invite-button" onclick="invite()">Invitame!!</button>
         </div>
-        <div style="height: 50px;"></div>
+        <div style="height: 20px;"></div>
         <div class="support-button-container">
           <button class="support-button" onclick="support()">Servidor de soporte</button>
         </div>
